--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "release-it": "^7.6.1"
   },
   "dependencies": {
+    "api-error-handler": "^1.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "helmet": "^3.13.0",
     "morgan": "^1.9.1"
   }
 }
