--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "release": "release-it -n"
+    "start": "nodemon server.js"
   },
   "private": true,
   "keywords": [
@@ -17,8 +16,7 @@
   "author": "Chronophylos",
   "license": "Unlicense",
   "devDependencies": {
-    "nodemon": "^1.19.1",
-    "release-it": "^7.6.3"
+    "nodemon": "^1.19.1"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
